# madhukarkumar_singlestore-mcp-server

./: .gitignore  README.md  claude_desktop_config.json  pyproject.toml  requirements-dev.txt  requirements.txt
singlestore_mcp_server/: __init__.py  server.py
src/singlestore_mcp_server/: server.py
