[project]
name = "singlestore_mcp_server"
version = "0.1.0"
description = "SingleStore MCP Server for Claude"
requires-python = ">=3.8"
dependencies = [
    "mcp",
    "anyio",
    "trio",
    "singlestoredb",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
